fix: scrollbar light/dark

--- a/app/globals.css
+++ b/app/globals.css
@@ -27,6 +27,12 @@ html {
 }
 
 * {
-	scrollbar-color: var(--color-gray-700) var(--color-gray-800);
+	scrollbar-color: var(--color-gray-200) var(--color-gray-100);
 	scrollbar-width: thin;
+}
+
+.dark {
+	* {
+		scrollbar-color: var(--color-gray-700) var(--color-gray-800);
+	}
 }
